--- a/style.css
+++ b/style.css
@@ -14,3 +14,11 @@ body{
   align-items: center;
   justify-content: center;
 }
+
+.container{
+  background-color: red;
+  width: 400px;
+  text-align: center;
+  border-radius: 8px;
+  overflow: hidden;
+}
