--- a/style.css
+++ b/style.css
@@ -16,9 +16,19 @@ body{
 }
 
 .container{
-  background-color: red;
   width: 400px;
   text-align: center;
   border-radius: 8px;
   overflow: hidden;
+}
+
+.card-header{
+  background: #f2f2f2;
+  padding: 60px 40px;
+}
+
+.pic{
+  display: inline-block;
+  padding: 8px;
+  background: linear-gradient(130deg, rgb(255, 114, 246), #5d1dd2);
 }
