--- a/style.css
+++ b/style.css
@@ -45,5 +45,16 @@ h1{
   color: #2b2b2b;
   font-size: 25px;
   font-weight: 600;
+  margin: 10px 0;
+}
+
+h2{
+  font-size: 18px;
+  color: #5d1dd2;
+}
+
+.icons-container{
+  display: flex;
+  justify-content: center;
   margin: 20px 0;
 }
