--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ h2{
   color: #5d1dd2;
 }
 
+p{
+  color: #2b2b2b;
+  font-size: 15px;
+  margin: 10px 0;
+}
+
 .icons-container{
   display: flex;
   justify-content: center;
