--- a/css/index.css
+++ b/css/index.css
@@ -17,108 +17,105 @@
   border-radius: .5rem;
   overflow: hidden;
   max-width: 400px;
-  box-shadow: 0 0 0.7rem 0 #383838;
+  box-shadow: 0.1rem 0.1rem 0.4rem 0 #383838;
   background-color: #f2f2f2;
 }
 
 .card__header {
-  padding: 1rem;  
+  padding: 2rem 2rem;
 }
 .card__header-img-container {
   display: flex;
-  width: 300px;
-  height: 300px;
+  width: 280px;
+  height: 280px;
   padding: 0.5rem;
   background: linear-gradient(130deg, #eb2b42, #5d1dd2);
   border-radius: .5rem;
   margin: auto;
+  background-size: 200% 200%;
+  animation: animated-gradient 2s linear infinite;
 }
+
+@keyframes animated-gradient {
+  25% {
+    background-position: left bottom;
+  }
+  50% {
+    background-position: right bottom;
+  }
+  75% {
+    background-position: right top;
+  }
+  100% {
+    background-position: left top;
+  }
+}
+
 .card__header-img {
   width: 100%;
   height: 100%;
 }
-.card__body {}
-.card__body-title {}
-.card__body-keywords {}
-.card__body-presentation {}
-.card__footer {}
-.card__fotter-nav-list {}
-.card__fotter-nav-item {}
-
-/*
-
-.article-card__container-header{
-  background: #f2f2f2;
-  padding: 60px 40px;
+.card__body {
+  text-align: center;
+  padding: 0.5rem 2rem;
 }
-
-.card__header{
-  display: inline-block;
-  padding: 8px;
-  background: linear-gradient(130deg, #eb2b42, #5d1dd2);
-  border-radius: 3px;
-}
-
-.pic img{
-  display: block;
-  width: 250px;
-  height: 250px;
-  border-radius: 3px;
-}
-
-h1{
+.card__body-title {
   color: #2b2b2b;
-  font-size: 25px;
+  font-size: 1.8rem;
   font-weight: 600;
-  margin: 10px 0;
+  margin: 0.5rem auto;
 }
-
-h2{
-  font-size: 18px;
+.card__body-keywords {
+  font-size: 1.1rem;
   color: #5d1dd2;
+  margin: 0.25rem auto;
 }
-
-p{
+.card__body-presentation {
   color: #2b2b2b;
   font-size: 15px;
   margin: 10px 0;
 }
-
-.icons-container{
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
+.card__footer {
+  padding: 0.5rem 2rem;
 }
-
-.icons-container ul{
+.card__fotter-nav-list {
   list-style: none;
   display: flex;
+  align-items: center;
   justify-content: center;
-  margin: 20px 0;
+}
+.card__fotter-nav-item {
+  display: flex;
 }
 
-.icons-container ul li a{
+.card__fotter-nav-icon {
+  text-decoration: none;
   color: #5d1dd2;
   width: 56px;
   font-size: 25px;
   transition: .3s;
 }
-
-.icons-container ul li a:hover{
+.card__fotter-nav-icon:hover {
   color: #eb2b42;
 }
+.card__footer-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem auto;
+}
 
-.contact-btn{
-  display: inline-block;
-  padding: 12px 50px;
+.card__footer-button-link{
+  text-decoration: none;
+  padding: 0.75rem 3.125rem;
   color: #5d1dd2;
   border: 2px solid #5d1dd2;
-  border-radius: 6px;
+  border-radius: 0.5rem;
   margin-top: 5px;
   transition: .3s;
 }
 
-.contact-btn:hover{
+.card__footer-button-link:hover{
   background: #5d1dd2;
   color: #f2f2f2;
-}*/
+}
