--- a/css/index.css
+++ b/css/index.css
@@ -5,26 +5,30 @@
   font-family: "Lato", Sans-serif, Arial;
   margin: 0;
 }
+
 .profile {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
 }
+
 .profile__container {
   padding: 0 1rem;
 }
+
 .card {
   border-radius: .5rem;
   overflow: hidden;
-  max-width: 400px;
+  max-width: 370px;
   box-shadow: 0.1rem 0.1rem 0.4rem 0 #383838;
   background-color: #f2f2f2;
 }
 
 .card__header {
-  padding: 2rem 2rem;
+  padding: 2rem 2rem 1rem 2rem;
 }
+
 .card__header-img-container {
   display: flex;
   width: 280px;
@@ -56,35 +60,58 @@
   width: 100%;
   height: 100%;
 }
-.card__body {
-  text-align: center;
+
+.card__body {    
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
   padding: 0.5rem 2rem;
 }
+
+.card__body-title,
+.card__body-keywords,
+.card__body-presentation,
+.card__footer {
+  text-align: center;
+  margin: 0;
+}
+
 .card__body-title {
   color: #2b2b2b;
   font-size: 1.8rem;
   font-weight: 600;
-  margin: 0.5rem auto;
 }
+
 .card__body-keywords {
   font-size: 1.1rem;
   color: #5d1dd2;
-  margin: 0.25rem auto;
 }
+
 .card__body-presentation {
   color: #2b2b2b;
   font-size: 15px;
-  margin: 10px 0;
 }
+
 .card__footer {
-  padding: 0.5rem 2rem;
+  padding: 1rem 2rem 2rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
+
+.card__footer-nav-container {
+  padding: auto;
+}
+
 .card__fotter-nav-list {
   list-style: none;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
+  margin: 0;
 }
+
 .card__fotter-nav-item {
   display: flex;
 }
@@ -96,14 +123,17 @@
   font-size: 25px;
   transition: .3s;
 }
+
 .card__fotter-nav-icon:hover {
   color: #eb2b42;
 }
+
 .card__footer-button-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 2rem auto;
+  margin: 0 auto;
+
 }
 
 .card__footer-button-link{
@@ -112,11 +142,16 @@
   color: #5d1dd2;
   border: 2px solid #5d1dd2;
   border-radius: 0.5rem;
-  margin-top: 5px;
   transition: .3s;
 }
 
 .card__footer-button-link:hover{
   background: #5d1dd2;
   color: #f2f2f2;
+}
+
+@media (min-width: 854px) {
+  .card {
+    max-width: 400px;
+  }
 }
