--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  padding: 1rem 0;
 }
 
 .profile__container {
@@ -158,4 +159,9 @@
     width: 256px;
     height: 256px;
   }
+
+  .profile {
+    padding: 0;
+  }
+
 }
